# lang-flash

./: Cargo.toml  vocabulary.csv
src/: main.rs
