[package]
name = "lang-flash"
version = "0.1.0"
authors = ["ethanxxxl <ethansmith.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
termion = "*"
rand = "0.8.4"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
